--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "tezos-wallet-component",
   "main": "dist/index.js",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "private": false,
-  "files": [ "dist", "README.md" ],
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "repository": "asbjornenge/tezos-wallet-component",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
